<resources>

    <string name="all_name_app">Todo Lite</string>

    <string name="all_message_welcome">Welcome</string>

    <string name="all_label_priority">Priority</string>
    <string name="all_label_priority_low">Low</string>
    <string name="all_label_priority_normal">Normal</string>
    <string name="all_label_priority_high">high</string>
    <string name="all_label_priority_crucial">Crucial</string>

    <string name="all_hint_email">Email Address</string>
    <string name="all_hint_password">Password</string>

    <string name="all_error_no_internet">No Internet Connection</string>
    <string name="all_error_email_required">Email address is required</string>
    <string name="all_error_email_invalid">Email address is invalid</string>
    <string name="all_error_password_required">Password is required</string>

    <string name="notification_channel_name_reminders">Reminders</string>
    <string name="notification_channel_description_reminders">Task reminders</string>


    <string name="login_title">Login</string>
    <string name="login_action_login">Login</string>
    <string name="login_action_register">Register Now</string>
    <string name="login_error_invalid_credentials">Invalid credentials</string>

    <string name="register_title">Register</string>
    <string name="register_action_register">Register</string>
    <string name="register_error_email_already_exist">Email already exist</string>

    <string name="tasks_action_sort">Sort</string>
    <string name="tasks_action_by_date">By date</string>
    <string name="tasks_action_by_priority">By priority</string>
    <string name="tasks_action_by_name">By name</string>
    <string name="tasks_action_logout">Logout</string>
    <string name="tasks_action_undo">Undo</string>
    <string name="tasks_message_deleted">Deleted</string>
    <string name="tasks_message_completed">Completed</string>
    <string name="tasks_message_empty">You don\'t have any todos</string>


    <string name="add_edit_task_hint_task_title">Task title</string>
    <string name="add_edit_task_label_deadline">Deadline</string>
    <string name="add_edit_task_label_today">Today</string>
    <string name="add_edit_task_label_reminder">Reminder</string>
    <string name="add_edit_task_error_invalid_title">Please, provide a title for the taskModel.</string>


    <string name="select_priority_title">Priority</string>
    <string name="select_priority_action_cancel">Cancel</string>


</resources>
