...
            app:theme="@style/Toolbar" />
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/tasks_layout_empty" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tasks_recyclerview_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/progress_bar"
...
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/tasks_button_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/margin_normal"
        android:src="@drawable/tasks_vector_add"
        app:backgroundTint="@color/all_accent"
...
