...
                android:layout_margin="@dimen/margin_normal"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:counterTextAppearance="@style/TextAppearance.AccentSmall">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_edit_task_input_edit_text_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_task_hint_task_title"
                    android:maxLength="100"
                    android:textColor="@color/all_white"
                    android:textSize="@dimen/typography_headline" />
...
        </FrameLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_edit_task_button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:src="@drawable/add_edit_task_vector_done"
        app:backgroundTint="@color/all_accent"
        app:fabSize="normal"
...
